--- a/app/src/main/res/layout/fragment_etkinlikler.xml
+++ b/app/src/main/res/layout/fragment_etkinlikler.xml
@@ -5,9 +5,9 @@
     tools:context="upiynar.cback.Etkinlikler">
 
     <!-- TODO: Update blank fragment layout -->
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Etkinlikler Moruq"/>
-
+<ListView
+    android:id="@+id/etkinlik_lview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</ListView>
 </LinearLayout>
