--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -3,14 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="upiynar.cback.Video">
-
-
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    tools:context="upiynar.cback.Video"
+    android:background="#000000">
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
